Re-run notebook

--- a/2024-oct-24-python/Webinar_Python.ipynb
+++ b/2024-oct-24-python/Webinar_Python.ipynb
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 ms ± 4.61 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2 ms ± 29.9 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.76 μs ± 112 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "2.54 μs ± 35.1 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -199,10 +199,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.00967244, 0.64831184, 0.33252616, 0.35029161],\n",
-       "       [0.47208615, 0.07361926, 0.8614362 , 0.56775698],\n",
-       "       [0.1771404 , 0.38745633, 0.41808485, 0.40363782],\n",
-       "       [0.54171113, 0.46625083, 0.56194795, 0.53811087]])"
+       "array([[0.80608521, 0.4404404 , 0.92649132, 0.00278103],\n",
+       "       [0.68802692, 0.31554829, 0.01683429, 0.25545612],\n",
+       "       [0.6006355 , 0.76953977, 0.1209406 , 0.26823396],\n",
+       "       [0.58014083, 0.97135389, 0.29446447, 0.26418435]])"
       ]
      },
      "execution_count": 7,
@@ -236,10 +236,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[9.67244129e-03, 1.64831184e+00, 2.33252616e+00, 3.35029161e+00],\n",
-       "       [4.47208615e+00, 5.07361926e+00, 6.86143620e+00, 7.56775698e+00],\n",
-       "       [8.17714040e+00, 9.38745633e+00, 1.04180849e+01, 1.14036378e+01],\n",
-       "       [1.25417111e+01, 1.34662508e+01, 1.45619479e+01, 1.55381109e+01]])"
+       "array([[ 0.80608521,  1.4404404 ,  2.92649132,  3.00278103],\n",
+       "       [ 4.68802692,  5.31554829,  6.01683429,  7.25545612],\n",
+       "       [ 8.6006355 ,  9.76953977, 10.1209406 , 11.26823396],\n",
+       "       [12.58014083, 13.97135389, 14.29446447, 15.26418435]])"
       ]
      },
      "execution_count": 8,
@@ -277,10 +277,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.64831184, 0.66505233, 1.05087482],\n",
-       "       [1.88834459, 0.3680963 , 5.16861723, 3.97429888],\n",
-       "       [1.41712319, 3.48710696, 4.18084855, 4.44001597],\n",
-       "       [6.50053355, 6.06126083, 7.86727129, 8.07166309]])"
+       "array([[0.00000000e+00, 4.40440396e-01, 1.85298264e+00, 8.34308056e-03],\n",
+       "       [2.75210768e+00, 1.57774144e+00, 1.01005750e-01, 1.78819287e+00],\n",
+       "       [4.80508402e+00, 6.92585791e+00, 1.20940599e+00, 2.95057356e+00],\n",
+       "       [6.96168992e+00, 1.26276006e+01, 4.12250253e+00, 3.96276521e+00]])"
       ]
      },
      "execution_count": 9,
@@ -304,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.45150033,  2.24728442,  3.38344976,  2.98936523],\n",
-       "       [ 7.25394079,  8.54983747, 12.07943046, 10.42855434],\n",
-       "       [12.05638125, 14.85239053, 20.77541116, 17.86774345],\n",
-       "       [16.85882171, 21.15494359, 29.47139185, 25.30693256]])"
+       "array([[ 3.6297204 ,  4.7686895 ,  1.14210889,  1.58447709],\n",
+       "       [14.32927422, 14.75621888,  6.5770316 ,  4.74709892],\n",
+       "       [25.02882804, 24.74374827, 12.0119543 ,  7.90972076],\n",
+       "       [35.72838187, 34.73127765, 17.44687701, 11.0723426 ]])"
       ]
      },
      "execution_count": 10,
@@ -360,6 +360,27 @@
     "\n",
     "url = \"https://raw.githubusercontent.com/pandas-dev/pandas/master/doc/data/titanic.csv\"\n",
     "titanic = pd.read_csv(url, index_col=\"Name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5747689f-7544-498d-806b-dc599f490668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 11)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.shape"
    ]
   },
   {
@@ -803,7 +824,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7e0ae4792800>"
+       "<matplotlib.legend.Legend at 0x7b4b54b9ec20>"
       ]
      },
      "execution_count": 16,
@@ -880,13 +901,16 @@
     "tags": []
    },
    "source": [
-    "[RAPIDS](https://rapids.ai/) is a high-level package collections which implement CUDA functionalities and API with Python bindings.\n",
+    ":::{important} [RAPIDS](https://rapids.ai/) is a high-level package collection\n",
+    "\n",
+    "It implements CUDA functionalities and API with Python bindings.\n",
     "\n",
     "**It only supports NVIDIA GPUs.**\n",
     "\n",
-    "- **`cuDF`** is the dataframe library for manipulating tabular datasets using GPU. cuDF provides a Pandas-like API for loading, joining, aggregating, filtering, and manipulating data.\n",
-    "- **`cuML`** is a suite of libraries that implement algorithms and mathematical primitives functions to train machine learning models on your data to make predictions, similar to the `scikit-learn` API.\n",
-    "\n"
+    "- **`cuDF`** is the dataframe library for manipulating tabular datasets using GPU. cuDF provides a **Pandas**-like API for loading, joining, aggregating, filtering, and manipulating data.\n",
+    "- **`cuML`** is a suite of libraries that implement algorithms and mathematical primitives functions to train machine learning models on your data to make predictions, similar to the **`scikit-learn`** API.\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -904,9 +928,11 @@
    "id": "216688a2-4cf2-4afd-b0c8-97e9c774a548",
    "metadata": {},
    "source": [
-    "`Numba` is an open-source just-in-time (JIT) compiler that translates a subset of Python and NumPy into fast machine code using LLVM.\n",
+    ":::{important} `Numba` is an open-source just-in-time (JIT) compiler\n",
     "\n",
-    "`Numba` offers options for parallelising Python code for CPUs and GPUs, with minor code changes."
+    "- It translates a subset of Python and NumPy into fast machine code using LLVM.\n",
+    "- `Numba` offers options for parallelising Python code for CPUs and GPUs, with minor code changes.\n",
+    ":::"
    ]
   },
   {
@@ -939,7 +965,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74.6 μs ± 2.14 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "79.5 μs ± 638 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -971,8 +997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 5.40 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "3.83 μs ± 3.5 μs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.98 μs ± 4.61 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -1068,7 +1093,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.08 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "2.95 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
@@ -1090,7 +1115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "170 ms ± 141 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "169 ms ± 150 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1110,7 +1135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75.5 ms ± 1.26 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "74.1 ms ± 511 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1125,10 +1150,11 @@
     "tags": []
    },
    "source": [
-    "**NOTE**\n",
+    ":::{note}\n",
     "- Using `ufunc` (or `gufunc`) for GPU programming may not always yield optimal performance due to automatic handling of data transfer and kernel launching.\n",
     "- In practical applications, not every function can be constructed as a `ufunc`.\n",
-    "- To gain a better performance, one need to calibrate kernels and manually manage data transfer."
+    "- To gain a better performance, one need to calibrate kernels and manually manage data transfer.\n",
+    ":::"
    ]
   },
   {
@@ -1191,8 +1217,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.64 ms ± 1.08 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
-      "[0.84947737 1.29048631 1.10367233 ... 1.53112959 0.72425712 0.81064006]\n"
+      "2.64 ms ± 1.14 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "[0.78838358 1.21154319 1.41323361 ... 0.90729069 1.02219255 1.32124254]\n"
      ]
     }
    ],
@@ -1206,7 +1232,6 @@
    "execution_count": 27,
    "id": "590c1cde-0d10-4643-bc60-0d4f66ad7d5b",
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -1214,8 +1239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.64 ms ± 103 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
-      "[0.84947737 1.29048631 1.10367233 ... 1.53112959 0.72425712 0.81064006]\n"
+      "2.64 ms ± 68.1 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "[0.78838358 1.21154319 1.41323361 ... 0.90729069 1.02219255 1.32124254]\n"
      ]
     }
    ],
@@ -1252,14 +1277,17 @@
    "id": "e660cfaa-fda1-4487-a6c3-939d1c5be457",
    "metadata": {},
    "source": [
-    "`CuPy` is a NumPy/SciPy-compatible array library for GPU-accelerated computing with Python. \n",
+    ":::{important} `CuPy` is a NumPy/SciPy-compatible array library for GPU-accelerated computing with Python. \n",
     "- It has been developed for NVIDIA GPUs but has experimental support both NVIDIA and AMD GPUs.\n",
     "- All you need to do is replace `numpy` and `scipy` with `cupy` and `cupyx.scipy` in your Python code.\n",
+    ":::\n",
     "\n",
+    ":::{seealso}\n",
     "Tutorials:\n",
     "- https://docs.cupy.dev/en/stable/user_guide/basic.html\n",
     "- https://arc.leeds.ac.uk/lesson-gpu-programming/02-cupy/index.html\n",
-    "- https://carpentries-incubator.github.io/lesson-gpu-programming/cupy.html"
+    "- https://carpentries-incubator.github.io/lesson-gpu-programming/cupy.html\n",
+    ":::"
    ]
   },
   {
@@ -1325,8 +1353,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time consumed by numpy:  0.5348212718963623\n",
-      "Time consumed by cupy :  0.16929936408996582\n"
+      "Time consumed by numpy:  0.4509103298187256\n",
+      "Time consumed by cupy :  0.03249478340148926\n"
      ]
     }
    ],
@@ -1471,15 +1499,16 @@
     "tags": []
    },
    "source": [
-    "[PyCUDA](https://pypi.org/project/pycuda/) is a Python programming environment for CUDA\n",
+    ":::{important} [PyCUDA](https://pypi.org/project/pycuda/) is a Python programming environment for CUDA\n",
     "- It allows users to access to NVIDIA’s CUDA parallel computing API from Python.\n",
     "- PyCUDA is powerful library but only runs on NVIDIA GPUs.\n",
-    "- Knowledge of CUDA programming is needed."
+    "- Knowledge of CUDA programming is needed.\n",
+    ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "6e4f986d-ba5e-4022-9136-2875a5098102",
    "metadata": {},
    "outputs": [],
@@ -1493,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "c34591de-1678-4f17-81c1-6e45f0504637",
    "metadata": {
     "tags": []
@@ -1503,10 +1532,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.10946888 -0.86248726  1.4052428   0.07518218]\n",
-      " [-0.5204806   0.9655635   0.90067714  0.86117774]\n",
-      " [-1.3822149  -0.20883751  0.9737442  -0.55296755]\n",
-      " [ 0.62747914 -0.89602816 -1.3253262  -0.65013725]]\n"
+      "[[-1.4692543  -1.4006982  -0.9751594   0.17828342]\n",
+      " [-0.47099897  0.4299076   1.0345104   1.214283  ]\n",
+      " [-0.09249809 -0.8394253   0.5509558  -1.2789341 ]\n",
+      " [-0.5057602   1.00467    -1.0094197   1.4986904 ]]\n"
      ]
     }
    ],
@@ -1529,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "34b741e9-f8a5-45f4-933b-54ac94e55069",
    "metadata": {},
    "outputs": [],
@@ -1555,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "499403ed-3144-49b4-9d4f-2d32996aae2d",
    "metadata": {},
    "outputs": [
@@ -1563,15 +1592,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.10946888 -0.86248726  1.4052428   0.07518218]\n",
-      " [-0.5204806   0.9655635   0.90067714  0.86117774]\n",
-      " [-1.3822149  -0.20883751  0.9737442  -0.55296755]\n",
-      " [ 0.62747914 -0.89602816 -1.3253262  -0.65013725]] \n",
+      "[[-1.4692543  -1.4006982  -0.9751594   0.17828342]\n",
+      " [-0.47099897  0.4299076   1.0345104   1.214283  ]\n",
+      " [-0.09249809 -0.8394253   0.5509558  -1.2789341 ]\n",
+      " [-0.5057602   1.00467    -1.0094197   1.4986904 ]] \n",
       "\n",
-      " [[-0.21893777 -1.7249745   2.8104856   0.15036435]\n",
-      " [-1.0409611   1.931127    1.8013543   1.7223555 ]\n",
-      " [-2.7644298  -0.41767502  1.9474884  -1.1059351 ]\n",
-      " [ 1.2549583  -1.7920563  -2.6506524  -1.3002745 ]]\n"
+      " [[-2.9385085  -2.8013964  -1.9503188   0.35656685]\n",
+      " [-0.94199795  0.8598152   2.0690207   2.428566  ]\n",
+      " [-0.18499617 -1.6788507   1.1019115  -2.5578682 ]\n",
+      " [-1.0115204   2.00934    -2.0188394   2.9973807 ]]\n"
      ]
     }
    ],
@@ -1586,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "2ca7fa6f-18eb-42dd-8f38-5673ae8bc40e",
    "metadata": {
     "tags": []
@@ -1596,15 +1625,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.12863097  0.89172095 -0.91712576  0.00667612]\n",
-      " [ 0.7322344   0.4088493  -0.20850135  0.02352402]\n",
-      " [ 1.4097329  -0.40287685  0.3767881   1.0235138 ]\n",
-      " [ 0.41873923  0.8164181   0.24754165  0.08261038]] \n",
+      "[[ 0.10586049 -2.3922634  -0.2553264  -0.9660976 ]\n",
+      " [-1.2670941  -0.37932327  0.8783075   0.43634078]\n",
+      " [ 1.6506102  -0.5951775   0.76673955  1.4514925 ]\n",
+      " [ 2.2399697   0.7734547   0.2173751   2.7589269 ]] \n",
       "\n",
-      " [[-0.25726193  1.7834419  -1.8342515   0.01335224]\n",
-      " [ 1.4644688   0.8176986  -0.4170027   0.04704804]\n",
-      " [ 2.8194659  -0.8057537   0.7535762   2.0470276 ]\n",
-      " [ 0.83747846  1.6328362   0.4950833   0.16522075]]\n"
+      " [[ 0.21172097 -4.784527   -0.5106528  -1.9321952 ]\n",
+      " [-2.5341883  -0.75864655  1.756615    0.87268156]\n",
+      " [ 3.3012204  -1.190355    1.5334791   2.902985  ]\n",
+      " [ 4.4799395   1.5469095   0.4347502   5.5178537 ]]\n"
      ]
     }
    ],
