Little summary of Jupyter tricks we use

--- a/2024-oct-24-python/Webinar_Python.ipynb
+++ b/2024-oct-24-python/Webinar_Python.ipynb
@@ -135,6 +135,118 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf82d9b4-c725-4da7-a7b2-4cf24c7588e0",
+   "metadata": {},
+   "source": [
+    "::::{hint} Jupyter and IPython \n",
+    "\n",
+    "This webinar is demonstrated on a Jupyter notebook, which uses an IPython (Interactive Python) kernel (a console running in the background).\n",
+    "All Python syntax are valid in IPython and on top of that it has some special features.\n",
+    "\n",
+    "Here, we will make use of the special variable `_` and **magic commands** ✨ `%time`, `%timeit` and `%%timeit`.\n",
+    "\n",
+    ":::: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "089d5a4c-886f-48b2-a7a9-4beea9e37d99",
+   "metadata": {},
+   "source": [
+    "Special variable `_` stores the value of the previous output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "546eab83-e1d5-4ec2-992e-35a168fa53ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e539fe4-bf17-4ec6-879f-307c72e6e5ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "915e419f-7301-4353-a826-5e549022f4ed",
+   "metadata": {},
+   "source": [
+    "Line magic `%time` records the wall-time for executing a Python expression _once_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d04edfb5-9576-4406-9df1-09cbdae2146c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time sum(range(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a678eb-25d8-4320-96ce-a583e08adba8",
+   "metadata": {},
+   "source": [
+    "Line magic `%timeit` let's you do a micro-benchmark of a single Python expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa4a704-1c64-4d6b-897c-fb4710af5069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = list(range(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b881b7e-4eb2-4cef-ae23-426c271728d9",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%timeit sum(xs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94131d07-ebe0-4fcd-a1a9-abad855fba72",
+   "metadata": {},
+   "source": [
+    "It can be also used as cell-magic `%%timeit` which does a micro-benchmark of a block of Python expressions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e69b472f-789b-470a-91c8-0dd2f5af3e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "total = 1\n",
+    "for i in range(90):\n",
+    "    total += i / total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b89c6550-0f01-4b54-840e-56bdca1d76af",
    "metadata": {
     "tags": []
