--- a/2024-oct-24-python/Webinar_Python_executed.ipynb
+++ b/2024-oct-24-python/Webinar_Python_executed.ipynb
@@ -135,6 +135,172 @@
   },
   {
    "cell_type": "markdown",
+   "id": "683223a9-da87-4d44-80ae-d44946c0ca03",
+   "metadata": {},
+   "source": [
+    "::::{hint} Jupyter and IPython \n",
+    "\n",
+    "This webinar is demonstrated on a Jupyter notebook, which uses an IPython (Interactive Python) kernel (a console running in the background).\n",
+    "All Python syntax are valid in IPython and on top of that it has some special features.\n",
+    "\n",
+    "Here, we will make use of the special variable `_` and **magic commands** ✨ `%time`, `%timeit` and `%%timeit`.\n",
+    "\n",
+    ":::: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24fd8cb5-0fc6-4f67-9d95-4b91d50fd91d",
+   "metadata": {},
+   "source": [
+    "Special variable `_` stores the value of the previous output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5736a344-8022-45af-985c-d0407858f056",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9f80516d-f288-459c-ae75-2b1273fe41e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173f58b4-876a-4182-bacc-8a1531d4b650",
+   "metadata": {},
+   "source": [
+    "Line magic `%time` records the wall-time for executing a Python expression _once_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c6759726-8520-414c-8d09-70d56ddf957e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12 μs, sys: 0 ns, total: 12 μs\n",
+      "Wall time: 15.7 μs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4950"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time sum(range(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09d556c8-f874-4395-88ee-bc7845bbb4db",
+   "metadata": {},
+   "source": [
+    "Line magic `%timeit` let's you do a micro-benchmark of a single Python expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ff42919c-e323-49e7-bf7b-221514a78822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = list(range(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "49d168eb-5a8b-4385-9fa2-75fa9410f89f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "370 ns ± 2.16 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum(xs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b5694cf-9634-4c98-94d2-3f9b124afea8",
+   "metadata": {},
+   "source": [
+    "It can be also used as cell-magic `%%timeit` which does a micro-benchmark of a block of Python expressions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "25203cfe-10ec-4583-b9ca-fa6977b51c79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.73 μs ± 11.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "total = 1\n",
+    "for i in range(90):\n",
+    "    total += i / total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b89c6550-0f01-4b54-840e-56bdca1d76af",
    "metadata": {
     "tags": []
