--- a/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
+++ b/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
@@ -928,7 +928,7 @@
     "\n",
     "GPU programming with Julia can be as simple as using a different array type instead of regular Base.Array. \n",
     "\n",
-    "For Apple M-series GPUs, it should use `ROCArray` from `AMDGPU.jl`."
+    "For an AMD GPU, the `ROCArray` type from `AMDGPU.jl`."
    ]
   },
   {
@@ -941,6 +941,7 @@
    "outputs": [],
    "source": [
     "using AMDGPU\n",
+    "using KernelAbstractions\n",
     "\n",
     "# copy an array to GPU and executes a simple operation on GPU\n",
     "A_d = ROCArray([1,2,3,4])\n",
@@ -984,11 +985,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function vadd!(C, A, B)\n",
-    "    for i in 1:length(A)\n",
-    "        @inbounds C[i] = A[i] + B[i]\n",
-    "    end\n",
+    "@kernel function vadd!(C, @Const(A), @Const(B))\n",
+    "    i = @Index(Global)\n",
+    "    @inbounds C[i] = A[i] + B[i]\n",
     "end\n",
+    "\n",
+    "function my_vadd!(C, A, B)\n",
+    "    backend = get_backend(A)\n",
+    "    kernel! = vadd!(backend)\n",
+    "    kernel!(C,A,B, ndrange = size(C)) # Could be a one-liner vadd!(backend, 256)(C, A, B, ndrange=size(C))\n",
     "\n",
     "A = zeros(10) .+ 3.0;\n",
     "B = ones(10) .* 2;\n",
@@ -1005,93 +1010,11 @@
    "source": [
     "# an example of vector addition kernel for Apple GPU\n",
     "\n",
-    "A_d = MtlArray(Float32.(A));\n",
-    "B_d = MtlArray(Float32.(B));\n",
+    "A_d = ROCArray(Float32.(A));\n",
+    "B_d = ROCArray(Float32.(B));\n",
     "C_d = similar(B_d);\n",
     "\n",
-    "# WARNING: the kernel above is not suitable for launching on GPUs\n",
-    "@metal vadd!(C_d, A_d, B_d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ea45a38-18b5-4844-9c4e-ffb5f160af06",
-   "metadata": {},
-   "source": [
-    "**NOTE**: the *performance is terrible* for the code above, because each thread on the GPU is performing the same loop! To split work among the GPU cores, we have to remove the loop over all elements and instead use special functions which, when called by each GPU thread, return a unique index. For Metal.jl we use `thread_position_in_grid_1d()`, while the corresponding function for CUDA.jl is `threadIdx()`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4885832d-ca2f-447b-a553-8faa4fa75d76",
-   "metadata": {},
-   "source": [
-    "![](https://enccs.github.io/julia-for-hpc/_images/MappingBlocksToSMs.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d516a9d7-391c-470e-b5b8-0b1353320224",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# replacing for-loop with thread_position_in_grid_1d()\n",
-    "function vadd!(C, A, B)\n",
-    "    index = thread_position_in_grid_1d()\n",
-    "    @inbounds C[index] = A[index] + B[index]\n",
-    "    return\n",
-    "end\n",
-    "\n",
-    "A = MtlArray(Float32.(ones(Float32, 2^9)*2));\n",
-    "B = MtlArray(Float32.(ones(Float32, 2^9)*3));\n",
-    "C = similar(A);\n",
-    "\n",
-    "N = length(A)\n",
-    "println(\"length of matrix A = \", N)\n",
-    "@metal threads=N vadd!(C, A, B)\n",
-    "\n",
-    "@assert all(Array(C) .== 5.0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbb9f340-2cf8-4900-b6c4-9cebbb0d1c6a",
-   "metadata": {},
-   "source": [
-    "However, this implementation will not work for arrays that are larger than the maximum number of threads in a block - try increasing the size to `2^12`! \n",
-    "\n",
-    "Clearly, GPUs have a limited number of threads they can run on a single SM. To parallelise over multiple SMs we need to run a kernel with multiple blocks where we also take advantage of the `blockDim()` and `blockIdx()` functions (in the case of NVIDIA). Here's how it looks for CUDA.jl:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fb4eef2-a5de-4ff2-a766-939dc13f1954",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this example is for CUDA.jl (requires CUDA-compatible NVIDIA GPUs)\n",
-    "function vadd!(C, A, B)\n",
-    "    i = threadIdx().x + (blockIdx().x - 1) * blockDim().x\n",
-    "    if i <= length(A)\n",
-    "        @inbounds C[i] = A[i] + B[i]\n",
-    "    end\n",
-    "    return\n",
-    "end\n",
-    "\n",
-    "A, B = CuArray(ones(2^9)*2), CuArray(ones(2^9)*3);\n",
-    "C = similar(A);\n",
-    "\n",
-    "nthreads = 256\n",
-    "# smallest integer larger than or equal to length(A)/threads\n",
-    "numblocks = cld(length(A), nthreads)\n",
-    "println(\"nthreads = \", nthreads, \", numblocks = \", numblocks)\n",
-    "\n",
-    "# run using 256 threads\n",
-    "@cuda threads=nthreads blocks=numblocks vadd!(C, A, B)\n",
-    "\n",
-    "@assert all(Array(C) .== 5.0)"
+    "vadd!(C_d, A_d, B_d)"
    ]
   },
   {
