WIP on stencil example

--- a/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
+++ b/2024-nov-21_julia_webinar/Webinar_Julia.ipynb
@@ -27,10 +27,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e815b9d",
+   "metadata": {},
+   "source": [
+    "## Short intro to GPU architecture\n",
+    "\n",
+    "GPUs are high-throughput accelerators separate from the main processor (CPU). They were originally developed to support the highly parallel computations needed for graphics processing, but are nowadays used to accelerate memory-local floating-point workloads. A GPU has a lot less control units and most of the die size is dedicated to floating point units, which execute tens of thousands of threads simultaneously. Data has to be manually moved from the *host* memory (i.e. RAM) to the *device* memory (i.e. video RAM, VRAM), which can be a performance bottleneck. Using GPUs makes sense when the performance gain from the parallel computation shadows the cost of data transfer to/from the accelerator. A comparison between CPU and GPU architectures is shown in the figure below:\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"https://enccs.github.io/gpu-programming/_images/CPUAndGPU.png\" width=\"800\"/>\n",
+    "<p>Ref: <a src=\"https://enccs.github.io/gpu-programming/\">ENCCS GPU programming lessons</a> </p>\n",
+    "</div>\n",
+    "\n",
+    "Each thread has a local memory. Cores are grouped into streaming multiprocessors (CUDA)/compute units (ROCm), with a shared (CUDA)/private (ROCm) memory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86df4aa7-8f24-417d-9aae-e43e740112ed",
    "metadata": {},
    "source": [
-    "## Julia was created to solve the two-language problem"
+    "## Julia and the two language problem"
    ]
   },
   {
@@ -91,23 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "464d91f2-400c-48aa-85c8-2e1e7e0db95f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.14 --- Float64\n",
-      "10 --- Int64\n",
-      "true --- Bool\n",
-      "3 + 4im --- Complex{Int64}\n",
-      "Hello, Julia --- String\n",
-      "(Float64, AbstractFloat, Real, Number, Any) --- Type[]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = 3.14\n",
     "println(A, \" --- \", typeof(A))\n",
@@ -140,24 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7249f064-ade5-4baa-9d95-85396864b2ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4-element Vector{Int64}:\n",
-       "  0\n",
-       "  6\n",
-       " 24\n",
-       " 60"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a1 = [1, 2, 3, 4] # 4-element Vector{Int64}\n",
     "a2 = [i^3 for i in [1,2,3,4]] # Array comprehension\n",
@@ -181,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b48bae8d",
    "metadata": {},
    "outputs": [],
@@ -204,22 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1aa81c99-5f70-473a-aff4-6a38c617c573",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i = 1\n",
-      "i = 2\n",
-      "i = 3\n",
-      "i = 4\n",
-      "i = 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in [1,2,3,4,5]\n",
     "    println(\"i = $i\")\n",
@@ -228,21 +206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bbac6471-56af-435a-9844-50841c5f5eae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i = 1, A[i] = 1\n",
-      "i = 2, A[i] = 3\n",
-      "i = 3, A[i] = 2\n",
-      "i = 4, A[i] = 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = [1 2; 3 4]\n",
     "# visit each index of A efficiently\n",
@@ -253,20 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e9576994-9b22-40fd-bb06-5b3865ebfa6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B is 2\n",
-      "A is 1\n",
-      "C is 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (k, v) in Dict(\"A\" => 1, \"B\" => 2, \"C\" => 3)\n",
     "    println(\"$k is $v\")\n",
@@ -314,18 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8185f9db-c86d-44d5-8124-14ef11e84552",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\"another line\"]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "open(\"myfile.txt\", \"w\") do f\n",
     "    write(f, \"a line\")\n",
@@ -348,20 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "39de13fe-7909-4eba-8174-ba8905b21a44",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function f(x,y)\n",
     "    x + y   # can also use \"return\" keyword\n",
@@ -479,20 +418,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "76acdc72-fd2b-441e-b474-303d3540c167",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sumsquare (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function sumsquare(x, y)\n",
     "    return x^2 + y^2\n",
@@ -510,20 +439,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "23aebcb5-71df-4e60-811a-a111c881af9c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sumsquare (generic function with 4 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sumsquare(x::Float64, y::Float64) = x^2 + y^2\n",
     "sumsquare(x::Int64, y::Int64) = x^2 + y^2\n",
@@ -542,20 +461,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "13975166-0ddc-46ff-bfd7-20fd0cbd6452",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\n",
-      "22.067300000000003\n",
-      "-1.689999999999999 - 0.7800000000000011im\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Passing arguments with all kinds of types to this function\n",
     "\n",
@@ -579,20 +488,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d6e91b7e-6ea8-445b-a8dc-7801fc64a93d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Point{Float64}(5.0, 13.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function sumsquare(p1::Point, p2::Point)\n",
     "   return Point(p1.x^2 + p2.x^2, p1.y^2 + p2.y^2)\n",
@@ -660,26 +559,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d45ab35e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Manifest.toml`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Some preliminary imports\n",
     "using Pkg\n",
@@ -698,29 +581,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Manifest.toml`\n",
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.10/Manifest.toml`\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "false"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# I have an AMDGPU so I need the AMDGPU.jl package\n",
     "Pkg.add(\"AMDGPU\")\n",
@@ -769,7 +630,6 @@
    "source": [
     "# A code example for matrix multiplication\n",
     "using BenchmarkTools\n",
-    "using AMDGPU\n",
     "\n",
     "A = rand(2^9, 2^9);\n",
     "A_d = ROCArray(A);\n",
@@ -791,30 +651,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "7ba5cf8c-cc0a-4634-90de-1df0dac5204f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10-element Vector{Float64}:\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0\n",
-       " 5.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@kernel function vadd!(C, @Const(A), @Const(B))\n",
     "    i = @index(Global)\n",
@@ -843,11 +683,12 @@
    "source": [
     "# an example of vector addition kernel for AMD GPU\n",
     "\n",
-    "A_d = ROCArray(Float32.(A));\n",
-    "B_d = ROCArray(Float32.(B));\n",
+    "A_d = ROCArray(A);\n",
+    "B_d = ROCArray(B);\n",
     "C_d = similar(B_d);\n",
     "\n",
-    "vadd!(C_d, A_d, B_d)"
+    "vadd!(C_d, A_d, B_d)\n",
+    "C_d"
    ]
   },
   {
@@ -858,7 +699,27 @@
     "A few interesting points:\n",
     "- `@kernel` is a macro that identifies the function as a compilable kernel that can run on one of the supported backends (CUDA, ROCm, oneAPI, Metal, CPU);\n",
     "- The `@Const` macro is used to ensure to the runtime that the array will not be modified or aliased. This allows for optimised read access. It roughly corresponds to the `__restrict` CUDA C keyword;\n",
-    "- "
+    "- The `@index(Global)` is used to obtain the index of the array element in the global workload (which in normal CUDA/HIP would need to be computed as `blockIdx.x * tile_dim + threadIdx.x`)\n",
+    "- `ndrange` is the total size of the workgroup."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3edaa091",
+   "metadata": {},
+   "source": [
+    "## A more convoluted example\n",
+    "\n",
+    "Let us now try to solve a problem that can be encountered in computational physics: the heat equation, which takes the following form:\n",
+    "\n",
+    "$$ \\dfrac{\\partial T}{\\partial t} = \\alpha\\nabla^2T $$\n",
+    "\n",
+    "This equation is suitable to describe diffusion processes. We will try to solve this equation on a regular 2D grid using [stencils](https://en.wikipedia.org/wiki/Stencil_(numerical_analysis)). \n",
+    "\n",
+    "<div>\n",
+    "<img src=\"https://enccs.github.io/gpu-programming/_images/stencil.svg\" width=\"800\">\n",
+    "<p>Regular 2D grid where the heat equation is solved. The indices `(i,j)` indicate the spacial coordinates of the gridpoints, whereas the superscript `m` indicates the timestep.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -1118,15 +979,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
